--- a/TankGame/TankGame.csproj
+++ b/TankGame/TankGame.csproj
@@ -72,10 +72,10 @@
   <ItemGroup>
     <Compile Include="Camera.cs" />
     <Compile Include="Cls3DAxis.cs" />
+    <Compile Include="ClsPlaneTextureIndexStripVB.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Terrain.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
