--- a/TankGame/TankGame.csproj
+++ b/TankGame/TankGame.csproj
@@ -73,7 +73,9 @@
     <Compile Include="Camera.cs" />
     <Compile Include="Cls3DAxis.cs" />
     <Compile Include="ClsPlaneTextureIndexStripVB.cs" />
+    <Compile Include="DustParticle.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="GenerateParticle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tank.cs" />
