bullets a dar, mas a direção ainda está mal

--- a/TankGame/TankGame.csproj
+++ b/TankGame/TankGame.csproj
@@ -70,6 +70,7 @@
     <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Bullets.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Cls3DAxis.cs" />
     <Compile Include="ClsPlaneTextureIndexStripVB.cs" />
