Deleted classes and updated new ones

--- a/TankGame/TankGame.csproj
+++ b/TankGame/TankGame.csproj
@@ -77,9 +77,9 @@
     <Compile Include="DustParticle.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GenerateParticle.cs" />
-    <Compile Include="Particle.cs" />
-    <Compile Include="ParticleSystem.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Projectile.cs" />
+    <Compile Include="ProjectileManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tank.cs" />
   </ItemGroup>
