--- a/TankGame/TankGame.csproj
+++ b/TankGame/TankGame.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="Cls3DAxis.cs" />
     <Compile Include="ClsPlaneTextureIndexStripVB.cs" />
+    <Compile Include="CollisionManager.cs" />
     <Compile Include="DustParticle.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GenerateParticle.cs" />
